--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ a:visited {
     height: 5vh;
     width: fit-content;
     align-items: center;
-    padding: 2px 5px;
+    padding: 7px 5px;
     margin-left: 0.75vw;
     border: 1px dotted black;
 }
@@ -149,7 +149,7 @@ a:visited {
     height: fit-content;
     width: 100%;
     align-items: center;
-    padding: 2px 5px;
+    padding: 7px 5px;
     border: 1px dotted black;
 }
 
@@ -225,14 +225,56 @@ a:visited {
     border: 1px dotted black;
 }
 
-#taskTagTitle {
+.taskTagFieldRow {
     position: relative;
     display: flex;
     height: fit-content;
     width: 100%;
     align-items: center;
-    padding: 2px 5px;
     border: 1px dotted black;
+}
+
+#taskTagTitle {
+    padding: 7px 5px;
+}
+
+#taskTagSelectorRow {
+    padding: 10px 15px;
+    font-size: 0.8em;
+}
+
+#tagSelectorButton {
+    cursor: pointer;
+    padding: 5px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#tagSelector {
+    display: none; /* Initially hidden */
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    top: 100%;
+    left: 0;
+    min-width: 100px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.tag-selector-tag {
+    cursor: pointer;
+    padding: 5px;
+    margin: 5px;
+    background-color: #f0f0f0;
+    border-radius: 3px;
+    display: inline-block;
+}
+
+.tag-selector-tag:hover {
+    background-color: #e0e0e0;
 }
 
 #taskTagInputField {
@@ -262,15 +304,16 @@ a:visited {
     position: relative;
     display: flex;
     margin-left: 1.5vw;
-    height: 7vh;
+    height: 6vh;
     width: calc(100% - 1.5vw);
     align-items: center;
     border: 1px dotted black;
 }
 
 #taskSubmitButton {
-    margin-top: 0.5vh;
-    margin-left: 5vw;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 2vw;
     background-color: grey;
 }
 
@@ -282,6 +325,8 @@ a:visited {
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+    font-size: 0.85em;
+    font-weight: bold;
     border: 1px dotted black;
 }
 
@@ -324,7 +369,7 @@ a:visited {
     border-top: 1px solid black;
 }
 
-.taskColumn {
+#taskColumn {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -332,13 +377,22 @@ a:visited {
     height: 100%;
     border-left: 1px solid black;
     border-right: 1px solid black;
+    overflow-y: scroll;
+}
+
+#taskColumnPlaceholder {
+    position: relative;
+    display: flex;
+    margin: auto;
+    font-size: 1.75em;
+    font-weight: bold;
 }
 
 .taskCell {
     position: relative;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    height: 35%;
     width: 100%;
     justify-content: flex-start;
     border-top: 1px solid black;
@@ -361,7 +415,7 @@ a:visited {
     position: relative;
     display: flex;
     height: 100%;
-    width: 10%;
+    width: 5%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -373,10 +427,11 @@ a:visited {
     display: flex;
     height: 100%;
     width: 90%; 
-    padding-left: 5px;
+    padding-left: 15px;
     align-items: center;
-    font-size: 0.85em;
+    font-size: 0.8em;
     text-align: left;
+    font-style: italic;
     border: 1px dotted black;
 }
 
@@ -384,7 +439,7 @@ a:visited {
     position: relative;
     display: flex;
     width: 100%;
-    flex: 1.5;
+    flex: 1.25;
     padding: 10px 15px;
     text-align: left;
     border: 1px dotted black;
@@ -395,17 +450,24 @@ a:visited {
     display: flex;
     margin-top: 0;
     width: 100%;
-    flex: 1;
-    padding: 4px 7px;
+    flex: 0.75;
     border: 1px dotted black;
     overflow-x: scroll;
-    font-weight: bold;
+}
+
+.taskCheckBox, .taskTagRowBufferBox {
+    position: relative;
+    display: flex;
+    height: 100%;
+    flex: 0.035;
+    padding: 4px 7px;
+    border: 1px dotted black;
 }
 
 .taskBottomRow {
     position: relative;
     display: flex;
-    flex: 1;
+    flex: 0.75;
     width: 100%;
 }
 
@@ -413,7 +475,7 @@ a:visited {
     position: relative;
     display: flex;
     height: 100%;
-    flex: 0.05;
+    flex: 0.035;
     padding: 4px 7px;
     border: 1px dotted black;
 }
@@ -425,6 +487,8 @@ a:visited {
     height: auto;
     padding: 4px 15px;
     align-items: center;
+    font-size: 0.8em;
+    font-style: italic;
     border: 1px dotted black;
 }
 
@@ -439,4 +503,8 @@ a:visited {
     width: 100%;
     justify-content: space-around;
     border: 1px solid black;
+}
+
+#ghostSpace {
+    display: none;
 }
