--- a/src/index.css
+++ b/src/index.css
@@ -54,36 +54,35 @@ a:visited {
     border-bottom: 1px solid black;
 }
 
-#taskDescriptionLabel {
-    margin-left: 0.75vw;
-}
-
 #taskDescriptionField {
     position: relative;
+    flex-direction: column;
+    display: flex;
     margin-top: 4vh;
     height: 12vh;
     width: 70%;
     margin-left: 0.75vw;
 }
 
+#taskDescriptionLabelField, #taskTimeTitle {
+    position: relative;
+    display: flex;
+    height: 5vh;
+    width: fit-content;
+    align-items: center;
+    padding: 7px 5px;
+    margin-left: 0.75vw;
+    border: 1px dotted black;
+}
+
 #taskDescriptionEntry {
-    flex: 1;
     height: 100%;
     width: 100%;
     overflow: hidden;
     word-wrap: break-word;
     resize: none;
+    padding: 0 10px;
     white-space: pre-wrap;
-    margin-left: 0.75vw;
-}
-
-#taskDescriptionEntry:focus {
-    background-color: light-blue;
-}
-
-#taskDescriptionLabel {
-    padding: 10px 5px;
-    border: 1px dotted black;
     margin-left: 0.75vw;
 }
 
@@ -91,20 +90,9 @@ a:visited {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 6vh;
+    margin-top: 2vh;
     height: 15vh;
     width: 50vw;
-    margin-left: 0.75vw;
-    border: 1px dotted black;
-}
-
-#taskTimeTitle {
-    position: relative;
-    display: flex;
-    height: 5vh;
-    width: fit-content;
-    align-items: center;
-    padding: 7px 5px;
     margin-left: 0.75vw;
     border: 1px dotted black;
 }
@@ -136,7 +124,7 @@ a:visited {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 4vh;
+    margin-top: 3vh;
     height: 18vh;
     width: 50vw;
     margin-left: 1.5vw;
@@ -168,7 +156,7 @@ a:visited {
     height: calc(100% - 2vh);
     width: 35%;
     margin-top: 2vh;
-    border: 1px solid black;
+    border: 1px dotted black;
 }
 
 #taskPriorityLabelField {
@@ -238,43 +226,58 @@ a:visited {
     padding: 7px 5px;
 }
 
-#taskTagSelectorRow {
-    padding: 10px 15px;
+#taskTagListRow {
+    padding: 10px 5px;
     font-size: 0.8em;
 }
 
-#tagSelectorButton {
-    cursor: pointer;
-    padding: 5px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#tagSelector {
-    display: none; /* Initially hidden */
-    position: absolute;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    top: 100%;
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
-    min-width: 100px;
-    padding: 10px;
-    border-radius: 5px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000000;
+    background-color: #00000066;
 }
 
-.tag-selector-tag {
+.modal-content {
+    background-color: #FEFEFE;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid black;
+    width: 80%;
+}
+
+.close {
+    color: #AAAAAA;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus {
+    color: #000000;
+    text-decoration: none;
     cursor: pointer;
-    padding: 5px;
-    margin: 5px;
-    background-color: #f0f0f0;
-    border-radius: 3px;
-    display: inline-block;
 }
 
-.tag-selector-tag:hover {
-    background-color: #e0e0e0;
+#tagTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+#tagTable tr {
+    border-bottom: 1px solid #808080;
+}
+
+#tagTable {
+    padding: 8px;
+    text-align: center;
 }
 
 #taskTagInputField {
@@ -284,8 +287,13 @@ a:visited {
     height: 18vh;
 }
 
+#taskTagEntry {
+    padding: 0 15px;
+}
+
 #taskTagInput {
     width: 70%;
+    padding: 0 15px;
 }
 
 #taskTagDescriptionField {
@@ -297,12 +305,15 @@ a:visited {
     font-size: 0.75em;
     align-items: center;
     text-align: center;
+    font-style: italic;
+    font-size: 0.75em;
     border: 1px dotted black;
 }
 
 #taskSubmitButtonField {
     position: relative;
     display: flex;
+    margin-top: 3vh;
     margin-left: 1.5vw;
     height: 6vh;
     width: calc(100% - 1.5vw);
