--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ a:visited {
     color: #0d7211;
 }
 
+input {
+    overflow: scroll;
+}
+
 #container {
     position: absolute;
     top: 0;
@@ -26,7 +30,7 @@ a:visited {
     height: 100vh;
     width: 50vw;
     border-right: 1px solid black;
-    overflow: hidden;
+    overflow: auto;
 }
 
 #leftPageTitleField {
@@ -94,7 +98,6 @@ a:visited {
     height: 15vh;
     width: 50vw;
     margin-left: 0.75vw;
-    border: 1px dotted black;
 }
 
 #taskTimeDropdownField {
@@ -273,11 +276,13 @@ a:visited {
 
 #tagTable tr {
     border-bottom: 1px solid #808080;
+    padding: 5px;
 }
 
-#tagTable {
-    padding: 8px;
+#tagTable td{
+    padding: 10px;
     text-align: center;
+    font-size: 1.5em;                   
 }
 
 #taskTagInputField {
@@ -430,6 +435,7 @@ a:visited {
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-weight: bold;
     border: 1px dotted black;
 }
 
