--- a/src/css/app.css
+++ b/src/css/app.css
@@ -38,10 +38,9 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 87vh;
     width: 100%;
     align-items: center;
-    border-bottom: 1px solid black;
 }
 
 #taskDescriptionField, #taskTagEntryField {
@@ -367,9 +366,10 @@
 #userTaskField {
     position: relative;
     display: flex;
-    height: 82vh;
+    height: 80vh;
     width: 100%;
     border-top: 1px solid black;
+    overflow-y: auto;
 }
 
 #taskColumn {
@@ -400,6 +400,7 @@
     justify-content: flex-start;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    flex-shrink: 0;
 }
 
 .taskCell:not(:first-child) {
@@ -503,8 +504,9 @@
 #taskPageButtonField {
     position: relative;
     display: flex;
-    height: 100%;
+    height: 6vh;
     width: 100%;
     justify-content: space-around;
+    background-color: #b0b0b0;
     border: 1px solid black;
 }
